--- a/src/index.html
+++ b/src/index.html
@@ -50,13 +50,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="/story.html">Our Story</a>
+                  <a class="nav-link" href="/story.html" aria-label="Our Story Link">Our Story</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/privacy.html">Privacy Policy</a>
+                  <a class="nav-link" href="/privacy.html" aria-label="Privacy Policy Link">Privacy Policy</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="content.html">Content Template [Beta]</a>
+                  <a class="nav-link" href="content.html" aria-label="Content Template Link">Content Template [Beta]</a>
                 </li>
               </ul>
             </div>
@@ -95,9 +95,17 @@
           <div class="col">
             <h5>About Us</h5>
             <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="story.html" class="nav-link p-0 text-muted">Our Story</a></li>
               <li class="nav-item mb-2">
-                <a class="nav-link p-0 text-muted active" aria-current="page" href="privacy.html">Privacy Policy</a>
+                <a href="story.html" class="nav-link p-0 text-muted" aria-label="Our Story Link">Our Story</a>
+              </li>
+              <li class="nav-item mb-2">
+                <a
+                  class="nav-link p-0 text-muted active"
+                  aria-current="page"
+                  href="privacy.html"
+                  aria-label="Privacy Policy Link"
+                  >Privacy Policy</a
+                >
               </li>
             </ul>
           </div>
@@ -106,13 +114,19 @@
             <h5>Share on Social Media</h5>
             <ul class="nav">
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted"><i class="bi bi-linkedin me-2"></i></a>
+                <a href="#" class="nav-link p-0 text-muted" aria-label="LinkedIn Link"
+                  ><i class="bi bi-linkedin me-2"></i
+                ></a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted"><i class="bi bi-twitter me-2"></i></a>
+                <a href="#" class="nav-link p-0 text-muted" aria-label="Twitter Link"
+                  ><i class="bi bi-twitter me-2"></i
+                ></a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted"><i class="bi bi-facebook me-2"></i></a>
+                <a href="#" class="nav-link p-0 text-muted" aria-label="Facebook Link"
+                  ><i class="bi bi-facebook me-2"></i
+                ></a>
               </li>
             </ul>
           </div>
