--- a/src/story.html
+++ b/src/story.html
@@ -52,13 +52,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="/story.html">Our Story</a>
+                  <a class="nav-link" href="/story.html" aria-label="Out Story Link">Our Story</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/privacy.html">Privacy Policy</a>
+                  <a class="nav-link" href="/privacy.html" aria-label="Privacy Policy Link">Privacy Policy</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="content.html">Content Template [Beta]</a>
+                  <a class="nav-link" href="content.html" aria-label="Content Template Link">Content Template [Beta]</a>
                 </li>
               </ul>
             </div>
@@ -224,10 +224,18 @@
             <div class="col">
               <h1>About Us</h1>
               <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="story.html">Our Story</a></li>
+                <li class="nav-item mb-2">
+                  <a class="nav-link p-0 text-muted" href="story.html" aria-label="Our Story Link">Our Story</a>
+                </li>
 
                 <li class="nav-item mb-2">
-                  <a aria-current="page" class="nav-link p-0 text-muted active" href="privacy.html">Privacy Policy</a>
+                  <a
+                    aria-current="page"
+                    class="nav-link p-0 text-muted active"
+                    href="privacy.html"
+                    aria-label="Privacy Policy Link"
+                    >Privacy Policy</a
+                  >
                 </li>
               </ul>
             </div>
@@ -236,13 +244,19 @@
               <h1>Share on Social Media</h1>
               <ul class="nav">
                 <li class="nav-item mb-2">
-                  <a class="nav-link p-0 text-muted" href="#"><i class="bi bi-linkedin me-2"></i></a>
+                  <a class="nav-link p-0 text-muted" href="#" aria-label="LinkedIn Link"
+                    ><i class="bi bi-linkedin me-2"></i
+                  ></a>
                 </li>
                 <li class="nav-item mb-2">
-                  <a class="nav-link p-0 text-muted" href="#"><i class="bi bi-twitter me-2"></i></a>
+                  <a class="nav-link p-0 text-muted" href="#" aria-label="Twitter Link"
+                    ><i class="bi bi-twitter me-2"></i
+                  ></a>
                 </li>
                 <li class="nav-item mb-2">
-                  <a class="nav-link p-0 text-muted" href="#"><i class="bi bi-facebook me-2"></i></a>
+                  <a class="nav-link p-0 text-muted" href="#" aria-label="Facebook Link"
+                    ><i class="bi bi-facebook me-2"></i
+                  ></a>
                 </li>
               </ul>
             </div>
