--- a/src/privacy.html
+++ b/src/privacy.html
@@ -71,74 +71,74 @@
             <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
 
                 <h1 class="fw-bold border-bottom" id="title">Privacy Policy</h1>
-                <div class="text-muted mb-3 ">By <a href="#">Jason Bilawsky</a><span class="text-muted me-3"> Last Updated:
-              March 22, 2023</span> <span class="text-muted" id="readingTime">0</span>
+                <div class="text-muted mb-3 ">By <a href="#">Author Name</a><span class="text-muted me-3"> Last Updated:
+              January 1, 2022</span> <span class="text-muted" id="readingTime">0</span>
                 </div>
                 <section class="row">
                     <h1>Privacy Policy</h1>
 
-                    <p>This Privacy Policy explains how we collect, use, and protect your personal
-                        information when you use our website about learning software engineering.
-                        We are committed to ensuring your privacy and security, and we take our
-                        responsibilities regarding the collection and use of your personal information
-                        very seriously.</p>
-	<h2>Information Collection and Use</h2>
-	<p>When you use our website, we may collect personal information such as your name,
-        email address, IP address, and browsing information. We collect this information to
-        provide you with the best possible service and to improve our website and services.</p>
-	<p>We use your personal information to:</p>
-	<ul>
-		<li>Provide you with access to our website and services</li>
-		<li>Send you information about our website and services</li>
-		<li>Respond to your requests and inquiries</li>
-		<li>Improve our website and services</li>
-		<li>Analyze user behavior and preferences</li>
-		<li>Comply with legal and regulatory obligations</li>
-	</ul>
-	<p>We do not sell, rent, or lease your personal information to third parties, except as
-        required by law or to provide you with the services you have requested.</p>
-
-	<h2>Cookies and Web Beacons</h2>
-	<p>We may use cookies and web beacons to collect information about your use of our website.
-        A cookie is a small file that is placed on your computer or device when you visit
-        our website. Web beacons are small graphic images that allow us to monitor user
-        behavior and collect information about your use of our website.</p>
-	<p>We use cookies and web beacons to:</p>
-	<ul>
-		<li>Analyze user behavior and preferences</li>
-		<li>Improve our website and services</li>
-		<li>Provide personalized content and advertisements</li>
-		<li>Remember your preferences and login information</li>
-	</ul>
-	<p>You can set your browser to reject cookies or to notify you when a cookie is being sent.
-        However, some features of our website may not function properly if cookies are disabled.</p>
-
-	<h2>Data Security</h2>
-	<p>We take reasonable measures to protect your personal information from unauthorized access,
-        disclosure, and destruction. We use industry-standard encryption technologies and firewalls
-        to protect your data. However, no method of transmission over the Internet or electronic
-        storage is 100% secure, and we cannot guarantee the absolute security of your personal
-        information.</p>
-
-	<h2>Third-Party Websites</h2>
-	<p>Our website may contain links to third-party websites. We are not responsible for the
-        privacy practices or content of these websites. We recommend that you review the
-        privacy policies of these websites before providing any personal information.</p>
-
-	<h2>Children's Privacy</h2>
-	<p>Our website is not intended for use by children under the age of 13. We do not
-        knowingly collect personal information from children under the age of 13. If
-        we become aware that we have collected personal information from a child under
-        the age of 13, we will take steps to delete the information as soon as possible.</p>
-
-	<h2>Changes to the Privacy Policy</h2>
-	<p>We reserve the right to update or modify this Privacy Policy at any time.
-        If we make material changes to this Privacy Policy, we will notify you by email or by
-        posting a notice on our website. Your continued use of our website after the effective
-        date of the updated Privacy Policy constitutes your acceptance of the updated Privacy Policy.</p>
-    <h2>Contact Us</h2>
-    <p>If you have any questions or concerns about this Privacy Policy or our website,
-        please contact us at mywebclass@njit.edu.</p>
+                    <p>We at mywebclass.org are committed to protecting your privacy. This Privacy Policy explains what
+                        information we collect from you when you visit our website, how we use it, and how we protect
+                        it. By using our website, you agree to the terms of this Privacy Policy.</p>
+                    <h2>Information we collect</h2>
+                    <p>We may collect the following information from you when you visit our website:</p>
+                    <ul>
+                        <li>Personal information such as your name and email address, if you choose to provide it to
+                            us.
+                        </li>
+                        <li>Information about your use of the website, such as pages visited, time spent on the site,
+                            and links clicked.
+                        </li>
+                        <li>Information about your device, such as your IP address, browser type, and operating
+                            system.
+                        </li>
+                    </ul>
+                    <h2>How we use your information</h2>
+                    <p>We use the information we collect from you for the following purposes:</p>
+                    <ul>
+                        <li>To improve our website and the user experience.</li>
+                        <li>To analyze user behavior and measure the effectiveness of our content and marketing
+                            efforts.
+                        </li>
+                        <li>To communicate with you about our products and services, if you have provided us with your
+                            contact information.
+                        </li>
+                        <li>To comply with legal obligations.</li>
+                    </ul>
+                    <h2>Google Analytics</h2>
+                    <p>We use Google Analytics to collect information about your use of our website. Google Analytics
+                        collects information such as how often users visit the site, what pages they visit when they do
+                        so, and what other sites they used prior to coming to our website. We use the information we get
+                        from Google Analytics to improve our website and the user experience. Google Analytics collects
+                        only the IP address assigned to you on the date you visit our website, rather than your name or
+                        other identifying information. We do not combine the information collected through the use of
+                        Google Analytics with personally identifiable information. Google Analytics plants a permanent
+                        cookie on your web browser to identify you as a unique user the next time you visit our website.
+                        This cookie cannot be used by anyone other than Google. Google’s ability to use and share
+                        information collected by Google Analytics about your visits to our website is restricted by the
+                        Google Analytics Terms of Use and the Google Privacy Policy.</p>
+                    <h2>Data retention and security</h2>
+                    <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
+                        it was collected, unless a longer retention period is required by law. We take reasonable
+                        measures to protect the information we collect from loss, theft, misuse, and unauthorized
+                        access, disclosure, alteration, and destruction.</p>
+                    <h2>Data retention and security</h2>
+                    <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
+                        it was collected, unless a longer retention period is required by law. We take reasonable
+                        measures to protect the information we collect from loss, theft, misuse, and unauthorized
+                        access, disclosure, alteration, and destruction.</p>
+                    <h2>Your rights</h2>
+                    <p>You have the right to access, correct, and delete your personal information. You also have the
+                        right to object to the processing of your personal information and to withdraw your consent to
+                        the processing of your personal information. To exercise these rights, please contact us at
+                        [contact email address].</p>
+                    <h2>Changes to this Privacy Policy</h2>
+                    <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting
+                        the new Privacy Policy on this page. We recommend that you review this Privacy Policy
+                        periodically for any changes.</p>
+                    <h2>Contact us</h2>
+                    <p>If you have any questions about this Privacy Policy, please contact us at [contact email
+                        address].</p>
 
                 </section>
 
