--- a/src/index.html
+++ b/src/index.html
@@ -51,10 +51,10 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="/story.html" aria-label="Our Story Link">Our Story</a>
+                  <a class="nav-link" href="story.html" aria-label="Our Story Link">Our Story</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/privacy.html" aria-label="Privacy Policy Link">Privacy Policy</a>
+                  <a class="nav-link" href="privacy.html" aria-label="Privacy Policy Link">Privacy Policy</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="content.html" aria-label="Content Template Link">Content Template [Beta]</a>
@@ -76,7 +76,7 @@
                 confidently prepare students for successful futures in the digital age.
               </p>
               <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                <a class="btn btn-primary btn-lg px-4 me-md-2 fw-bold" href="/story.html">Start Here</a>
+                <a class="btn btn-primary btn-lg px-4 me-md-2 fw-bold" href="story.html">Start Here</a>
               </div>
             </div>
             <div class="col-lg-5 offset-lg-1 p-0 overflow-hidden shadow-lg">
