--- a/src/privacy.html
+++ b/src/privacy.html
@@ -49,10 +49,10 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="/story.html" aria-label="Our Story Link">Our Story</a>
+                  <a class="nav-link" href="story.html" aria-label="Our Story Link">Our Story</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/privacy.html" aria-label="Privacy Policy Link">Privacy Policy</a>
+                  <a class="nav-link" href="privacy.html" aria-label="Privacy Policy Link">Privacy Policy</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="content.html" aria-label="Create Template Link">Content Template [Beta]</a>
