updated story and content files to include stronger keywords -Jason B

--- a/src/content.html
+++ b/src/content.html
@@ -76,13 +76,30 @@
                 </section>
                 <section id="section2">
                     <h2>Section 2</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
+                    <p>
+                        Our mission at MyWebClass.org is to provide high-quality, accessible,
+                        and affordable online education for individuals looking to learn software
+                        engineering. We believe that education should be accessible to everyone,
+                        regardless of their background, location, or financial situation.
+
+                        Our goal is to provide a comprehensive learning experience that covers all
+                        aspects of software engineering, from coding fundamentals to advanced
+                        topics such as machine learning and data science. We are dedicated to
+                        providing engaging and interactive content, including video lectures,
+                        hands-on coding exercises, and real-world projects, that give learners
+                        the practical skills they need to succeed in their careers.
+
+                        At MyWebClass.org, we are committed to creating a supportive and
+                        collaborative community of learners and instructors. We believe that
+                        the best learning happens when learners are able to share their knowledge
+                        and experiences with others, and we encourage our learners to connect and
+                        collaborate with one another through our online forums and discussion groups.
+
+                        We are passionate about empowering individuals to build a better future
+                        through technology, and we believe that software engineering is one of
+                        the most powerful tools available to us today. Our mission is to
+                        provide a platform for learners to develop the skills and knowledge
+                        they need to make a positive impact on the world around them.
                     </p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
                         nibh
