--- a/src/story.html
+++ b/src/story.html
@@ -83,13 +83,14 @@
                             <h2 class="h4 mb-4">Values</h2>
                             <ul>
                                 <li><strong>People:</strong> We value the people in our community and believe that every
-                                    student and teacher has the potential to succeed. We strive to create an inclusive
+                                    student and teacher has the potential to succeed in the software engineering field. We strive to create an inclusive
                                     and supportive environment where everyone feels welcome to learn and grow.
                                 </li>
                                 <li><strong>Learning:</strong> We believe that learning is a lifelong process and that
                                     everyone has something to teach and something to learn. We are committed to
                                     providing educational opportunities that help students and teachers gain experience
-                                    with new technologies and learn advanced software engineering concepts.
+                                    with new technologies and learn advanced software engineering concepts in various methods,
+                                    including lectures, hands-on activities and real world problems.
                                 </li>
                                 <li><strong>Efficiency:</strong> We recognize that time is a valuable resource, and we
                                     strive to make the most of it. We aim to provide a practical, hands-on learning
@@ -98,7 +99,7 @@
                                 </li>
                                 <li><strong>Dependability:</strong> We understand the importance of being reliable and
                                     consistent. We aim to provide a stable and dependable platform for students and
-                                    teachers to learn and collaborate.
+                                    teachers of all skill levels to learn and collaborate.
                                 </li>
                             </ul>
                             <p>Each of these values supports our mission by creating a welcoming and supportive
