Changes to relative './' for index page to try to squash Home link navigation issue when deployed to GitHub pages.

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -24,7 +24,7 @@
       <header class="fixed-top" role="banner">
         <nav aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="./">
               <img
                 src="assets/images/logo.jpg"
                 alt="MyWebClass Logo"
@@ -67,7 +67,7 @@
             <div class="row align-items-center">
               <div class="col-auto text-start">
                 <ol class="breadcrumb my-0">
-                  <li class="breadcrumb-item"><a href="/">Home</a></li>
+                  <li class="breadcrumb-item"><a href="./">Home</a></li>
                   <li aria-current="page" class="breadcrumb-item active">Content Template</li>
                 </ol>
               </div>
