--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <header role="banner" class="fixed-top">
         <nav role="navigation" aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="./">
               <img
                 src="assets/images/logo.jpg"
                 alt="MyWebClass Logo"
