--- a/src/privacy.html
+++ b/src/privacy.html
@@ -11,7 +11,7 @@
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Our Story" name="keywords">
-    <meta content="Keith Williams" name="author"/>
+    <meta content="shivam patil" name="student"/>
     <meta content="The story and mission of MyWebClass.org" name="description">
 
     <!--OpenGraph meta -->
