Adds and adjusts various Playwright tests. Brings test count to 32.

--- a/src/content.html
+++ b/src/content.html
@@ -92,7 +92,7 @@
             <section id="title">
               <h1 class="fw-bold border-bottom">Article Title</h1>
               <div class="text-muted mb-3">
-                By: Dina Lahham | Arly Volmar | Nathan Hernandez
+                By: Dina Lahham | Arly Volmar | Nathan Hernandez | ChatGPT
                 <span class="text-muted me-3"> Last Updated: March 21, 2023</span>
                 <span class="text-muted" id="readingTime">0</span>
               </div>
